--- a/resources/finalization/view/finalization.html
+++ b/resources/finalization/view/finalization.html
@@ -47,7 +47,7 @@
                                 <strong class="d-inline-block pr-3">Search Result :</strong>
                                 <span class="d-inline-block pr-5">{{recordTotal}} Result Found</span>
                                 <div class="d-inline-block pl-5">Sort:</div>
-                                <select class="custom-select innerFilter" ng-change="sorting(option)" ng-model="option">
+                                <select class="custom-select innerFilterSort" ng-change="sorting(option)" ng-model="option">
                             <option value=""> Select</option>
                             <option value="receivedDateDesc">By Date Asc</option>
                             <option value="receivedDate">By Date Desc</option>
