--- a/resources/registration/view/registration-general.html
+++ b/resources/registration/view/registration-general.html
@@ -187,7 +187,7 @@
         <ui-carousel slides="fileInfos" on-init="onCarouselInit()" slides-to-show="1" slides-to-scroll="1" initial-slide="$parent.previewIndex" style="width:98%;height:100%;margin-bottom:0px;margin-left:18px"
             infinite="false" name="previewSlider" ng-if = "fileInfos.length > 0 && isPreview">
             <carousel-item>
-                <div style="width:94%; padding:1px;">
+                <div style="width:94%; padding:4px;">
                     <div class="row">
                         <div class="col-sm-6" style="float:left;">
                             <button type="button" class="btn" style="background-color: #00aeef; color:white" ng-click="hidePreview();">Upload
@@ -202,8 +202,8 @@
                             </a>
                         </div>    
                     </div>
-                    <div ng-show="item.ext != 'docx'">
-                        <iframe ng-src="{{trustUrl(item)}}" width="100%" height="590px"></iframe>
+                    <div ng-show="item.ext != 'docx'" style="padding-left:5px;">
+                        <iframe ng-src="{{trustUrl(item)}}" width="98%" height="590px"></iframe>
                     </div>
                     <div ng-show="item.ext == 'docx'" style="width:98%; height:500px;color:white;font-size:25px;text-align:center">
                         <br><br><br>No Preview Available
@@ -231,39 +231,37 @@
                 </div>
             </div>
         </div>
-        <div class="" ng-if = "fileInfos.length > 0 && !isPreview && uploaded" id="thumbnailSlider">
-            <div class="row">
-                <ui-carousel slides="fileInfos" on-init="onCarouselInit()" slides-to-show="2" slides-to-scroll="2" initial-slide="0" style="width:85%;margin-bottom:0px;margin-left:35px"
-                    infinite="false" name="thumbnailSlider">
-                    <carousel-item>
-                        <div class="row" style="float:right; padding-right: 22px; color:red;cursor:pointer" ng-click="$parent.deleteFile($index)"><i class="fa fa-remove"></i></div>
-                        <div ng-class="{'img-padding' : $odd }">
-                            <thumbnail file-type="{{ item.ext }}" source="{{ item.previewUrl }}"  max-height="80" class="pdf-view" ng-show="item.ext == 'image'" ></thumbnail>
-                            <thumbnail file-type="{{ item.ext }}" source="{{ item.previewUrl }}" class="pdf-view" max-height="80" ng-show="item.ext == 'pdf'"></thumbnail>
-                            <div ng-show="item.ext == 'docx'">
-                                <i class="fa fa-file-word-o center" style="font-size:80px; color:#26559a; width:150px; height: 85px; text-align:center"></i>
-                            </div>                            
-                            <p style="white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis; font-size:small; border-top:1px solid #d3d8de;padding-top:12px;">
-                                <a href="" ng-click="showPreview($index, item)">
-                                    <span>{{item.name}}</span><br>
-                                    <span>Uploaded on {{item.uploadedDate | date: 'mediumDate'}}</span>
-                                </a>
-                            </p>
-                            <p>
-                                <i class="fa fa-file-picture-o upload-file-icon" ng-show = "item.ext == 'image'" style="color:#00aeef;"></i>
-                                <i class="fa fa-file-pdf-o upload-file-icon" ng-show = "item.ext == 'pdf'" style="color:red;"></i>
-                                <i class="fa fa-file-word-o upload-file-icon" ng-show = "item.ext == 'docx'" style="color:#26559a;"></i>
-                            </p>                            
-                        </div>                        
-                    </carousel-item>
-                    <carousel-prev>
-                        <i class="fa fa-chevron-left" style="font-size: 15px;"></i>
-                    </carousel-prev>
-                    <carousel-next>
-                        <i class="fa fa-chevron-right" style="font-size: 15px;"></i>
-                    </carousel-next>
-                </ui-carousel>
-            </div>
+        <div ng-if = "fileInfos.length > 0 && !isPreview && uploaded" id="thumbnailSlider">
+            <ui-carousel slides="fileInfos" on-init="onCarouselInit()" slides-to-show="2" slides-to-scroll="2" initial-slide="0" style="width:85%;margin-bottom:0px;margin-left:35px;padding-top:7px;"
+                infinite="false" name="thumbnailSlider">
+                <carousel-item>
+                    <div class="row" style="float:right; padding-right: 32px; color:red;cursor:pointer" ng-click="$parent.deleteFile($index)"><i class="fa fa-remove"></i></div>
+                    <div ng-class="{'img-padding' : $odd }">
+                        <thumbnail file-type="{{ item.ext }}" source="{{ item.previewUrl }}"  max-height="80" class="pdf-view" ng-show="item.ext == 'image'" ></thumbnail>
+                        <thumbnail file-type="{{ item.ext }}" source="{{ item.previewUrl }}" class="pdf-view" max-height="80" ng-show="item.ext == 'pdf'"></thumbnail>
+                        <div ng-show="item.ext == 'docx'">
+                            <i class="fa fa-file-word-o center" style="font-size:80px; color:#26559a; width:150px; height: 85px; text-align:center"></i>
+                        </div>                            
+                        <p style="white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis; font-size:small; border-top:1px solid #d3d8de;padding-top:12px;">
+                            <a href="" ng-click="showPreview($index, item)">
+                                <span>{{item.name}}</span><br>
+                                <span>Uploaded on {{item.uploadedDate | date: 'mediumDate'}}</span>
+                            </a>
+                        </p>
+                        <p>
+                            <i class="fa fa-file-picture-o upload-file-icon" ng-show = "item.ext == 'image'" style="color:#00aeef;"></i>
+                            <i class="fa fa-file-pdf-o upload-file-icon" ng-show = "item.ext == 'pdf'" style="color:red;"></i>
+                            <i class="fa fa-file-word-o upload-file-icon" ng-show = "item.ext == 'docx'" style="color:#26559a;"></i>
+                        </p>                            
+                    </div>                        
+                </carousel-item>
+                <carousel-prev>
+                    <i class="fa fa-chevron-left" style="font-size: 16px;"></i>
+                </carousel-prev>
+                <carousel-next>
+                    <i class="fa fa-chevron-right" style="font-size: 16px;"></i>
+                </carousel-next>
+            </ui-carousel>
         </div>
     </div>
 </section>
