--- a/resources/eclaim/view/eclaim.html
+++ b/resources/eclaim/view/eclaim.html
@@ -122,7 +122,7 @@
                 </div>                
             </div>
             <div class="rightContentPart float-right pr-0 pb-3">
-                <a href="javascript:;" class="infoToggleBtn" ng-class="{'infoToggleBtnToggled' : infoToggle}" ng-click="infoToggle = !infoToggle"><span class="oi" data-glyph="arrow-right"></span> <br />info</a>
+                <a href="javascript:;" class="infoToggleBtn" ng-class="{'infoToggleBtnToggled' : infoToggle}" ng-style="{'margin-left' : !infoToggle ? '12px' : '0px'}" ng-click="infoToggle = !infoToggle"><span class="oi" data-glyph="arrow-right"></span> <br />info</a>
                 <div class="medicalCardInfoBox medicalCardInfoBoxShow" id="medicalCardInfoBox" ng-class="{'medicalCardInfoBoxShow' : !infoToggle}">
                     <h3>Medical card info</h3>
                     <ul>
@@ -209,12 +209,12 @@
                             </button>
                             <button type="button" class="btn btn-secondary">
                                 <span class="oi" data-glyph="thumb-down"></span>
-                            </button>
-                            <button type="button" class="btn btn-secondary" ng-click="addRow();">
-                                <span class="oi" data-glyph="plus"></span>
-                            </button>
+                            </button>                            
                         </div>
                         <h3 class="innerHeadText mt-2 mb-2 d-inline-block">Claim Treatment/Service Level</h3><div class="currencyType d-inline-block">Currency: AED</div>
+                        <a href="javascript:;" class="tablColmArrow float-right mt-2 mb-2 mr-3 ml-2" ng-click="addRow();">
+                            <span class="oi" data-glyph="plus"></span>
+                        </a>
                         <a href="javascript:;" class="tablColmArrow float-right mt-2 mb-2 mr-3 ml-2" id="right-button">
                             <span class="oi" data-glyph="chevron-right"></span>
                         </a>
