--- a/resources/user-assignment/view/user-assignment.html
+++ b/resources/user-assignment/view/user-assignment.html
@@ -32,7 +32,7 @@
                         </md-input-container>
                     </div>
                     <div style="border-left: 1px solid #e6e6e6; width: 100% !important;">
-                        <md-input-container flex-gt-sm>
+                        <md-input-container flex flex-gt-sm>
                             <label style="white-space: pre-line;">Request Received From</label>
                             <md-datepicker ng-model="requestedDate" md-open-on-focus md-hide-icons="all"></md-datepicker>
                         </md-input-container>
