--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -45,7 +45,7 @@
                 <div class="row">
                     <div class="col-12 p-0">
                         <div class="reimbListTabl" id="reimbListTabl">
-                            <h3 class="innerHeadText mt-2 mb-2 ml-2 d-inline-block">Claim Treatment/Service Level</h3>
+                            <h3 class="innerHeadText mt-2 mb-2 ml-2 d-inline-block">Registered Request</h3>
                             <table class="table">
                                 <thead>
 
